--- a/todo.html
+++ b/todo.html
@@ -17,7 +17,7 @@
       </div>
 
       <div class="mg-auto textalign-center">
-        <div class="todoColumn">
+        <div class="todoColumn" id="todocolumn">
           <div class="border ht-wd bgcl">
             <h2 class="padding">TO-DO</h2>
             <div id="div-todo">
